--- a/case/s_methods_processes.tex
+++ b/case/s_methods_processes.tex
@@ -1,9 +1,7 @@
 
- \section{Quality in the project}
+ \section{Quality Assurance in the Project}
 
 Quality assurance in the Päikky project was not formally specified or planned beforehand. Methods and processes were selected primarily by individual developers and talked through with the whole team. Methods and tools were taken to use when necessary.
-
-\subsection{Quality Methods and Processes}
 
 \textbf{Agile development.} The project was executed using agile development. The development was done in a week long sprints, which included a weekly review and planning session. The customer representatives were present in the weekly meetings. This enabled that the implementation of the features in the finished sprint could be assessed against the understanding of the customer. 
 
