Removed extra chapters

--- a/improving/s_post_release.tex
+++ b/improving/s_post_release.tex
@@ -54,9 +54,9 @@ Considering these topics, the worst case scenario would include a long-time runn
 
 Mutually, the best case would have a fresh, low complexity software with well commented source code in easy language. In this case the maintenance personnel would consist of well trained maintenance professionals having good tools for maintaining the software. In this situation, the maintenance assignment scope could be over 3000 function points or over 150000 source code statements.
 
-\subsection{First year discovery rates}
+% \subsection{First year discovery rates}
 
 % \subsection{Fixers: Development personnel or Maintenance specialists}
 
-\subsection{Costs of Post-Release Defects in small application}
+% \subsection{Costs of Post-Release Defects in small application}
 
