Removed some TODOs from titles

--- a/qa_startup/s_evaluation.tex
+++ b/qa_startup/s_evaluation.tex
@@ -21,7 +21,7 @@ When working with a 3D chat software called IMVU, Ries and his colleagues decide
 
 Lean Startup method is aiming for the goal of winning over customers and not opposed to building high-quality products. Thus, it is necessary to set aside some professional standards to enable the validated learning as soon as possible. This is not supposed to allow operating in an undisciplined manner. This is important as there are some quality problems that can slow down the Build-Measure-Learn feedback loop. In addition, defects complicate the evolution of the product and interfere with the ability to learn. Helping the development of the MVP means removing any feature, process or effort that does not lead directly to the learning sought.~\cite{ries2011lean}
 
-\section{TODO: Foundations of high quality}
+\section{Foundations of high quality}
 
  \subsection{Clean code} 
 
@@ -39,7 +39,7 @@ Lean Startup method is aiming for the goal of winning over customers and not opp
 
  Conceptual integrity is smoothness and uniformity of the whole system's central concepts. The architecture of the system has an effective balance between flexibility, maintainability, efficiency and responsiveness. Conceptual integrity is a prerequisite to perceived integrity. To be able to achieve perceived integrity, the system must have a consistent design. As the system evolves and matures, conceptual integrity emerges. Although conceptual integrity is needed for perceived integrity, the existence of the former does not ensure the existence of the latter. This is because conceptual integrity is not sufficient for a successful customer experience, if the system does not meet the users' need.~\cite{poppendieck2003LSD}
 
-\section{TODO: Aiming towards high quality}
+\section{Aiming towards high quality}
 
 \subsection{Build Integrity In} 
 
